Modified layout, added gulpfile, added font-awesome

--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,13 @@ title: lescinskas.lt
 email: your-email@domain.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 baseurl: ""
-url: "http://yourdomain.com"
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://lescinskas.lt"
+twitter_username: lescinskas
+facebook_username:  paulius.lescinskas
+linkedin_username: pluton
 
 # Build settings
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title/
+
+exclude: ['node_modules', 'gulpfile.js']
