--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,11 @@ twitter_username: lescinskas
 facebook_username:  paulius.lescinskas
 linkedin_username: pluton
 
+date_format: "%B %e, %Y"
+date_format_archive: "%B %e"
+
 # Build settings
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title/
 
-exclude: ['node_modules', 'gulpfile.js']
+exclude: ['node_modules', 'gulpfile.js', '.gitignore']
