--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ url: "http://lescinskas.lt"
 twitter_username: lescinskas
 facebook_username:  paulius.lescinskas
 linkedin_username: pluton
+google_analytics_id: UA-771978-2
 
 date_format: "%B %e, %Y"
 date_format_archive: "%B %e"
