Updated site description

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: lescinskas.lt
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+email: paulius.lescinskas@gmail.com
+description: "Paulius Leščinskas weblog"
 baseurl: ""
 url: "http://lescinskas.lt"
 twitter_username: lescinskas
