--- a/_config.yml
+++ b/_config.yml
@@ -16,4 +16,4 @@ date_format_archive: "%B %e"
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title/
 
-exclude: ['node_modules', 'gulpfile.js', '.gitignore']
+exclude: ['node_modules', 'gulpfile.js', '.gitignore', 'package.json']
