--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp": "*",
     "gulp-minify-html": "*",
     "gulp-minify-css": "*",
+    "gulp-rsync": "*",
     "run-sequence": "*"
   }
 }
