--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "gulp-minify-html": "*",
         "gulp-minify-css": "*",
         "gulp-rsync": "*",
+        "gulp-env": "*",
         "run-sequence": "*"
     }
 }
