--- a/_config.yml
+++ b/_config.yml
@@ -17,4 +17,4 @@ date_format_archive: "%B %e"
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title/
 
-exclude: ['node_modules', 'gulpfile.js', '.gitignore', 'package.json', 'README.md']
+exclude: ['node_modules', 'nbproject', 'gulpfile.js', '.gitignore', 'package.json', 'README.md']
