Changed url to use https scheme

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: lescinskas.lt
 email: paulius.lescinskas@gmail.com
 description: "Paulius Leščinskas weblog"
 baseurl: ""
-url: "http://lescinskas.lt"
+url: "https://lescinskas.lt"
 twitter_username: lescinskas
 facebook_username:  paulius.lescinskas
 linkedin_username: pluton
