--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,5 @@ markdown: kramdown
 permalink: /blog/:year/:month/:day/:title/
 
 exclude: ['node_modules', 'nbproject', 'gulpfile.js', '.gitignore', 'package.json', 'README.md']
+
+host: 0.0.0.0
