--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
         "node": ">= 0.10.0"
     },
     "devDependencies": {
-        "gulp": "~3.9.0",
-        "gulp-minify-html": "~1.0.4",
-        "gulp-minify-css": "~1.2.1",
-        "gulp-rsync": "~0.0.5",
+        "gulp": "^3.9.1",
         "gulp-env": "~0.2.0",
+        "gulp-minify-css": "~1.2.1",
+        "gulp-minify-html": "~1.0.4",
         "gulp-rev": "~6.0.1",
         "gulp-rev-collector": "~1.0.2",
+        "gulp-rsync": "~0.0.5",
         "run-sequence": "~1.1.5"
+    },
+    "dependencies": {
+        "npm": "^6.9.0"
     }
 }
