Updated drone config

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,5 +1,5 @@
 kind: pipeline
-name: default
+name: lescinskas.lt release
 
 steps:
 - name: build
@@ -41,6 +41,21 @@ steps:
     dockerfile: nginx.Dockerfile
     json_key:
       from_secret: google_container_registry
+
+- name: deploy
+  image: google/cloud-sdk
+  when:
+    branches: [master]
+    event:
+      - push
+      - deployment
+  commands:
+    - echo $GOOGLE_KUBERNETES_ENGINE > /gke.json
+    - gcloud auth activate-service-account --key-file=/gke.json
+    - gcloud config set project lescinskas-lt
+    - gcloud config set compute/zone europe-north1-a
+    - gcloud container clusters get-credentials lescinskas-lt-web-cluster
+    - kubectl set image deployment/beta-lescinskas-lt-deploy nginx-server=eu.gcr.io/lescinskas-lt/nginx-server:${DRONE_COMMIT_SHA:0:8} --record
 
 image_pull_secrets:
 - docker_config
