--- a/.drone.yml
+++ b/.drone.yml
@@ -50,8 +50,8 @@ steps:
       - push
       - deployment
   commands:
-    - echo $${GKE_BASE64} | base64 -d > /gke.json
-    - gcloud auth activate-service-account --key-file=/gke.json
+    - echo $${GKE_BASE64} | base64 -d > gke.json
+    - gcloud auth activate-service-account --key-file=gke.json
     - gcloud config set project lescinskas-lt
     - gcloud config set compute/zone europe-north1-a
     - gcloud container clusters get-credentials lescinskas-lt-web-cluster
