--- a/.drone.yml
+++ b/.drone.yml
@@ -50,12 +50,12 @@ steps:
       - push
       - deployment
   commands:
-    - echo $${GKE_BASE64} | base64 -d > gke.json
+    - echo ${GKE_BASE64} | base64 -d > gke.json
     - gcloud auth activate-service-account --key-file=gke.json
     - gcloud config set project lescinskas-lt
     - gcloud config set compute/zone europe-north1-a
     - gcloud container clusters get-credentials lescinskas-lt-web-cluster
-    - kubectl set image deployment/beta-lescinskas-lt-deploy nginx-server=eu.gcr.io/lescinskas-lt/nginx-server:$${DRONE_COMMIT_SHA:0:8} --record
+    - kubectl set image deployment/beta-lescinskas-lt-deploy nginx-server=eu.gcr.io/lescinskas-lt/nginx-server:${DRONE_COMMIT_SHA:0:8} --record
 
 image_pull_secrets:
 - docker_config
