--- a/.drone.yml
+++ b/.drone.yml
@@ -46,7 +46,7 @@ steps:
     event:
       - push
       - promote
-    environment: beta
+    environment: [beta]
   commands:
     - echo $${GKE_BASE64} | base64 -d > gke.json
     - gcloud auth activate-service-account --key-file=gke.json
@@ -65,7 +65,7 @@ steps:
     branches: [master]
     event:
       - promote
-    environment: production
+    environment: [production]
   commands:
     - echo $${GKE_BASE64} | base64 -d > gke.json
     - gcloud auth activate-service-account --key-file=gke.json
