--- a/.drone.yml
+++ b/.drone.yml
@@ -46,7 +46,7 @@ steps:
     event:
       - push
       - promote
-    environment: [beta]
+    target: [beta]
   commands:
     - echo $${GKE_BASE64} | base64 -d > gke.json
     - gcloud auth activate-service-account --key-file=gke.json
@@ -64,7 +64,7 @@ steps:
   when:
     branches: [master]
     event: promote
-    environment: production
+    target: production
   commands:
     - echo $${GKE_BASE64} | base64 -d > gke.json
     - gcloud auth activate-service-account --key-file=gke.json
