Updated Drone pipeline

--- a/.drone.yml
+++ b/.drone.yml
@@ -46,7 +46,8 @@ steps:
     event:
       - push
       - promote
-    target: [beta]
+    target:
+      - beta
   commands:
     - echo $${GKE_BASE64} | base64 -d > gke.json
     - gcloud auth activate-service-account --key-file=gke.json
