--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
     },
     "devDependencies": {
         "gulp": "^4.0.2",
-        "gulp-env": "~0.2.0",
-        "gulp-minify-css": "~1.2.1",
-        "gulp-minify-html": "~1.0.4",
-        "gulp-rev": "~6.0.1",
-        "gulp-rev-collector": "~1.0.2",
-        "gulp-rsync": "~0.0.5",
-        "gulp4-run-sequence": "^1.0.1",
-        "run-sequence": "~1.1.5"
+        "gulp-env": "~0.4.0",
+        "gulp-minify-css": "~1.2.4",
+        "gulp-minify-html": "~1.0.6",
+        "gulp-rev": "~9.0.0",
+        "gulp-rev-collector": "~1.3.1",
+        "gulp-rsync": "~0.0.8",
+        "gulp4-run-sequence": "^1.0.1"
     },
     "dependencies": {
         "npm": "^6.13.7"
