--- a/.drone.gke.yml
+++ b/.drone.gke.yml
@@ -25,22 +25,21 @@ steps:
     - npm install
     - npx gulp
 
-- name: publish to DockerHub
-  image: plugins/docker
+- name: publish to
+  image: plugins/gcr
   when:
     branches: [master]
     event:
       - push
   settings:
-    repo: plutzilla/lescinskas.lt
+    repo: lescinskas-lt/nginx-server
     tags:
       - ${DRONE_COMMIT_SHA:0:8}
       - latest
+    registry: eu.gcr.io
     dockerfile: nginx.Dockerfile
-    username:
-      from_secret: DOCKERHUB_USERNAME
-    password:
-      from_secret: DOCKERHUB_TOKEN
+    json_key:
+      from_secret: google_container_registry
 
 - name: deploy to beta
   image: google/cloud-sdk
@@ -54,7 +53,7 @@ steps:
     - gcloud config set project lescinskas-lt
     - gcloud config set compute/zone europe-north1-a
     - gcloud container clusters get-credentials lescinskas-lt-web-cluster
-    - kubectl set image deployment/beta-lescinskas-lt-deploy nginx-server=plutzilla/lescinskas.lt:$${IMAGE_TAG} --record
+    - kubectl set image deployment/beta-lescinskas-lt-deploy nginx-server=eu.gcr.io/lescinskas-lt/nginx-server:$${IMAGE_TAG} --record
   environment:
     GKE_BASE64:
       from_secret: gke_base64
@@ -72,8 +71,11 @@ steps:
     - gcloud config set project lescinskas-lt
     - gcloud config set compute/zone europe-north1-a
     - gcloud container clusters get-credentials lescinskas-lt-web-cluster
-    - kubectl set image deployment/lescinskas-lt-deploy nginx-server=plutzilla/lescinskas.lt:$${IMAGE_TAG} --record
+    - kubectl set image deployment/lescinskas-lt-deploy nginx-server=eu.gcr.io/lescinskas-lt/nginx-server:$${IMAGE_TAG} --record
   environment:
     GKE_BASE64:
       from_secret: gke_base64
     IMAGE_TAG: ${DRONE_COMMIT_SHA:0:8}
+
+image_pull_secrets:
+- docker_config
