--- a/deploy/helm/lescinskas.lt/Chart.yaml
+++ b/deploy/helm/lescinskas.lt/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: lescinskas-lt
-description: A Helm chart for Kubernetes
+description: lescinskas.lt deployment chart
 
 # A chart can be either an 'application' or a 'library' chart.
 #
