--- a/.drone.yml
+++ b/.drone.yml
@@ -49,7 +49,8 @@ steps:
     event:
       - push
   environment:
-    - DIGITALOCEAN_ACCESS_TOKEN: ${DIGITALOCEAN_ACCESS_TOKEN}
+    DIGITALOCEAN_ACCESS_TOKEN:
+      fron_secret: DIGITALOCEAN_ACCESS_TOKEN
   commands:
     - doctl k8s cluster kubeconfig show do-k8s-lescinskas-lt-cluster > .kubeconfig
 
