--- a/.drone.yml
+++ b/.drone.yml
@@ -52,12 +52,33 @@ steps:
     DIGITALOCEAN_ACCESS_TOKEN:
       fron_secret: DIGITALOCEAN_ACCESS_TOKEN
   commands:
-    - doctl k8s cluster kubeconfig show do-k8s-lescinskas-lt-cluster > .kubeconfig
+    - ./doctl k8s cluster kubeconfig show do-k8s-lescinskas-lt-cluster > .kubeconfig
 
 - name: List helm deployments
   image: alpine/helm
   when:
     branches: [master]
+    event: [push]
+  commands:
+    - list --kubeconfig=.kubeconfig
+
+
+- name: Authenticate to DigitalOcean
+  image: digitalocean/doctl
+  when:
+    branches: [do-cicd]
+    event:
+      - push
+  environment:
+    DIGITALOCEAN_ACCESS_TOKEN:
+      fron_secret: DIGITALOCEAN_ACCESS_TOKEN
+  commands:
+    - doctl k8s cluster kubeconfig show do-k8s-lescinskas-lt-cluster > .kubeconfig
+
+- name: List helm deployments
+  image: alpine/helm
+  when:
+    branches: [do-cicd]
     event: [push]
   commands:
     - list --kubeconfig=.kubeconfig
