--- a/.drone.yml
+++ b/.drone.yml
@@ -72,6 +72,7 @@ steps:
     DIGITALOCEAN_ACCESS_TOKEN:
       fron_secret: DIGITALOCEAN_ACCESS_TOKEN
   commands:
+    - /app/doctl auth init
     - /app/doctl k8s cluster kubeconfig show do-k8s-lescinskas-lt-cluster > .kubeconfig
 
 - name: List helm deployments (branch)
