--- a/.drone.yml
+++ b/.drone.yml
@@ -51,11 +51,10 @@ steps:
     - /app/doctl auth init --access-token $DIGITALOCEAN_ACCESS_TOKEN
     - /app/doctl k8s cluster kubeconfig show do-k8s-lescinskas-lt-cluster > .kubeconfig
 
-- name: List helm deployments
+- name: Deploy Helm Chart to Staging
   image: alpine/helm
   when:
     branch: [do-cicd]
     event: [push]
   commands:
     - helm upgrade --install --kubeconfig=.kubeconfig -f ./deploy/helm/beta-lescinskas-lt.values.yaml --set image.tag=${DRONE_COMMIT_SHA:0:8} beta-lescinskas-lt ./deploy/helm/lescinskas.lt
-    # - helm upgrade --install --kubeconfig=.kubeconfig -f ./deploy/helm/beta-lescinskas-lt.values.yaml --set image.tag=latest beta-lescinskas-lt ./deploy/helm/lescinskas.lt
