--- a/.drone.yml
+++ b/.drone.yml
@@ -12,13 +12,13 @@ steps:
     - bundle exec jekyll build -s src -d _site
   when:
     branch: [master, do-cicd]
-    event: [push]
+    event: [push, tag]
 
 - name: Minify
   image: node:13
   when:
     branch: [master, do-cicd]
-    event: [push]
+    event: [push, tag]
   commands:
     - npm install
     - npx gulp
@@ -27,11 +27,11 @@ steps:
   image: plugins/docker
   when:
     branch: [master, do-cicd]
-    event: [push]
+    event: [tag]
   settings:
     repo: plutzilla/lescinskas.lt
     tags:
-      - ${DRONE_COMMIT_SHA:0:8}
+      - ${DRONE_TAG##v}
       - latest
     dockerfile: nginx.Dockerfile
     username:
@@ -42,8 +42,8 @@ steps:
 - name: Authenticate to DigitalOcean
   image: digitalocean/doctl
   when:
-    branch: [do-cicd]
-    event: [push]
+    branch: [master, do-cicd]
+    event: [tag]
   environment:
     DIGITALOCEAN_ACCESS_TOKEN:
       from_secret: DIGITALOCEAN_ACCESS_TOKEN
@@ -54,7 +54,9 @@ steps:
 - name: Deploy Helm Chart to Staging
   image: alpine/helm
   when:
-    branch: [do-cicd]
-    event: [push]
+    branch: [master, do-cicd]
+    event: [tag]
   commands:
-    - helm upgrade --install --kubeconfig=.kubeconfig -f ./deploy/helm/beta-lescinskas-lt.values.yaml --set image.tag=${DRONE_COMMIT_SHA:0:8} beta-lescinskas-lt ./deploy/helm/lescinskas.lt
+    - helm upgrade --install --kubeconfig=.kubeconfig -f ./deploy/helm/beta-lescinskas-lt.values.yaml --set image.tag=${DRONE_TAG##v} beta-lescinskas-lt ./deploy/helm/lescinskas.lt
+
+# TODO: Deployment to Production
