--- a/.drone.yml
+++ b/.drone.yml
@@ -43,8 +43,7 @@ steps:
   image: digitalocean/doctl
   when:
     branch: [master, do-cicd]
-    event: [tag, promote]
-    # target: production
+    event: [tag]
   environment:
     DIGITALOCEAN_ACCESS_TOKEN:
       from_secret: DIGITALOCEAN_ACCESS_TOKEN
@@ -60,11 +59,24 @@ steps:
   commands:
     - helm upgrade --install --kubeconfig=.kubeconfig -f ./deploy/helm/beta-lescinskas-lt.values.yaml --set image.tag=${DRONE_TAG##v} beta-lescinskas-lt ./deploy/helm/lescinskas.lt
 
+- name: Authenticate to DigitalOcean (deployment)
+  image: digitalocean/doctl
+  when:
+    branch: [master, do-cicd]
+    event: promote
+    target: production
+  environment:
+    DIGITALOCEAN_ACCESS_TOKEN:
+      from_secret: DIGITALOCEAN_ACCESS_TOKEN
+  commands:
+    - /app/doctl auth init --access-token $DIGITALOCEAN_ACCESS_TOKEN
+    - /app/doctl k8s cluster kubeconfig show do-k8s-lescinskas-lt-cluster > .kubeconfig
+
 - name: Deploy Helm Chart to Production
   image: alpine/helm
   when:
     branch: [master, do-cicd]
-    event: [tag, promote]
-    # target: production
+    event: promote
+    target: production
   commands:
     - helm upgrade --install --kubeconfig=.kubeconfig -f ./deploy/helm/www-lescinskas-lt.values.yaml --set image.tag=${DRONE_TAG##v} www-lescinskas-lt ./deploy/helm/lescinskas.lt
