Renamed Dockerfile to better represent service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   jekyll:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: jekyll.Dockerfile
     image: plutzilla/jekyll
     volumes:
       - .:/site
