--- a/.drone.yml
+++ b/.drone.yml
@@ -9,8 +9,9 @@ steps:
   image: jekyll/minimal:4
   environment:
     JEKYLL_ENV: production
-    JEKYLL_UID: 0
-    JEKYLL_GID: 0
+    # JEKYLL_UID: 0
+    # JEKYLL_GID: 0
+    JEKYLL_DATA_DIR: /drone/src
   commands:
     - jekyll build -s src -d _site --trace
   when:
