--- a/.drone.yml
+++ b/.drone.yml
@@ -7,11 +7,11 @@ steps:
 
 - name: Build
   image: jekyll/minimal:4
-  user: jekyll
+  user: root
   environment:
     JEKYLL_ENV: production
-    # JEKYLL_UID: 0
-    # JEKYLL_GID: 0
+    JEKYLL_UID: 0
+    JEKYLL_GID: 0
     # JEKYLL_DATA_DIR: /drone/src
   commands:
     - jekyll build -s src -d _site --trace
