--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       - run: mkdir src/.jekyll-cache
       - run: chmod 0777 src/.jekyll-cache
       - run: mkdir _site
-      - run: chown 0777 _site
+      - run: chmod 0777 _site
       - uses: docker://jekyll/minimal:4
         with:
           args: jekyll build -s src -d _site --trace
