--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,16 +25,26 @@ jobs:
           path: _site
   minify:
     name: Minify website files
+    needs: build
     runs-on: ubuntu-20.04
     steps:
+      - uses: actions/checkout@v2
       - name: Download built artifact
         uses: actions/download-artifact@v2
         with:
           name: website-build
+          path: _site
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
           node-version: 13
+      - name: Cache Node modules
+        uses: actions/cache@v2
+        env:
+          cache-name: node-module-cache
+        with:
+          path: ~/.npm
+          key: ${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
       - run: npm install
       - run: npx gulp
       - name: Store minified website
