--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,7 @@ jobs:
           name: website-minified
           path: _site
   publish-docker-image:
-    name: Publish Docker image to Github Packages
+    name: Publish Docker image to GitHub Container Registry (GHCR)
     needs: minify
     runs-on: ubuntu-20.04
     steps:
@@ -63,13 +63,12 @@ jobs:
         with:
           name: website-minified
           path: _site
-      - name: Push to GitHub Packages
+      - name: Push to GitHub Container Registry
         uses: docker/build-push-action@v1
         with:
           dockerfile: nginx.Dockerfile
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          repository: plutzilla/lescinskas.lt/lescinskas.lt
-          tags: latest
+          registry: ghcr.io
+          repository: plutzilla/lescinskas.lt
           tag_with_ref: true
